# voice-agent-pizzeria

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/voice_agent_pizzeria/: __init__.py  agent.py  cart.py  config.py  logging_setup.py  prompts.py  tools.py  validation.py
tests/: test_agent.py  test_cart.py  test_evals.py  test_realtime_smoke.py  test_tools.py
